Updated to AWS Lambda Servlet version 0.2.1